--- a/hospital-api.properties
+++ b/hospital-api.properties
@@ -8,3 +8,5 @@ val.db.values = {connectionString: 'http://localhost:8999/test/list', userName: 
 pro.info=J
 pro.data=T
 pro.number=4444
+
+spring.profiles.active=dev
