Revert "changed label"
This reverts commit 5c553b2246bfc39c1a4ff2d0bca2347b477eb515.

--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,7 @@ spring.application.name=hospital-api
 server.port=8081
 management.endpoints.web.exposure.include=*
 
-vval.label.one = Denmark
+val.label.one = Denmark
 val.label.two = Welcome to ${val.label.one}
 val.list = AA KK CC ZZ
 val.db.values = {connectionString: 'http://localhost:8081/test/list', userName: 'admin', password: 'admin'}
