--- a/hospital-api.properties
+++ b/hospital-api.properties
@@ -1,6 +1,6 @@
 
 
-vval.label.one = Australia
+val.label.one = Australia
 val.label.two = welcome to ${val.label.one}
 val.list = Kolkata Lonavala
 val.db.values = {connectionString: 'http://localhost:8999/test/list', userName: 'a', password: 'a'}
