--- a/hospital-api.properties
+++ b/hospital-api.properties
@@ -1,4 +1,4 @@
-vval.label.one = Australia
+val.label.one = Venice
 val.label.two = welcome to ${val.label.one}
 val.list = Kolkata Lonavala
 val.db.values = {connectionString: 'http://localhost:8999/test/list', userName: 'a', password: 'a'}
